--- a/app/src/main/res/layout/calendar.xml
+++ b/app/src/main/res/layout/calendar.xml
@@ -3,8 +3,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CalenderFragment"
-    android:orientation="vertical">
+    tools:context=".CalendarFragment"
+    android:orientation="vertical"
+    android:background="#ee0a1d">
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:text="Calendar/Schedule"
+        android:textSize="30dp"
+        android:textStyle="bold|italic"
+        android:textColor="#fff"
+
+        />
 
     <CalendarView
         android:id="@+id/calender"
@@ -12,4 +26,16 @@
         android:layout_height="369dp">
 
     </CalendarView>
+
+    <Button
+        android:id="@+id/btn_add_event"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="#fff"
+        android:text="go to google calendar"
+        android:textAllCaps="false"
+        android:textColor="#000"
+        android:textStyle="bold|italic" />
+
 </LinearLayout>
