--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -1,24 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="#fff"
-    tools:context=".HomeFragment"
-    android:orientation="vertical">
+
+    android:background="#ee0a1d"
+
+    android:orientation="vertical"
+    tools:context=".HomeFragment">
 
         <TextView
-            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="120dp"
+            android:layout_gravity="center"
+
             android:text="Shu-katsu App"
-            android:textSize="50dp"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+            android:textColor="#fff"
+            android:textSize="50dp"
+            android:textStyle="bold|italic" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp"
+            android:text="-Calendar・TodoList・Memo-"
             android:textColor="#000"
-            android:textStyle="bold|italic"/>
+            android:textSize="20dp" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="398dp"
+            android:layout_marginTop="25dp"
+            android:src="@drawable/job2" />
+
 
 
 
