--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -3,9 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
-    android:background="#ee0a1d"
-
     android:orientation="vertical"
     tools:context=".HomeFragment">
 
@@ -15,6 +12,7 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center"
+            android:layout_marginTop="100dp"
 
             android:text="Shu-katsu App"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
@@ -31,11 +29,16 @@
             android:textColor="#000"
             android:textSize="20dp" />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="398dp"
-            android:layout_marginTop="25dp"
-            android:src="@drawable/job2" />
+        <!--<ImageView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:src="@drawable/syukatsu"/>-->
+
+        <!--<ImageView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="398dp"-->
+            <!--android:layout_marginTop="25dp"-->
+            <!--android:src="@drawable/job2" />-->
 
 
 
