--- a/app/src/main/res/layout/memo.xml
+++ b/app/src/main/res/layout/memo.xml
@@ -21,8 +21,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="Add"
-            />
+            android:background="#fff"
+            android:text="create new memo"
+            android:textAllCaps="false"
+            android:textColor="#000"
+            android:textStyle="bold|italic" />
 
         <View
             android:layout_width="match_parent"
@@ -32,27 +35,28 @@
     </RelativeLayout>
 
 
+    <ListView
+
+        android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="364dp"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="10dp"
+        android:listSelector="@android:color/transparent" />
+
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="44dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center_vertical"
         android:text="Memo"
-        android:textColor="#000000"
+        android:textColor="#fff"
         android:textSize="30dp"
         android:textStyle="bold|italic" />
-
-    <ListView
-        android:id="@+id/listView"
-        android:layout_width="match_parent"
-        android:layout_height="469dp"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/title"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="10dp"
-        android:listSelector="@android:color/transparent" />
 
 
 </RelativeLayout>
