--- a/app/src/main/res/layout/todo.xml
+++ b/app/src/main/res/layout/todo.xml
@@ -14,7 +14,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:text="Todo Lists"
-        android:textColor="#000000"
+        android:textColor="#fff"
         android:textSize="30sp"
         android:textStyle="bold|italic" />
 
@@ -72,9 +72,8 @@
         android:layout_height="418dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="53dp">
-
-
+        android:layout_marginBottom="53dp"
+        >
     </ListView>
 
 </RelativeLayout>
