--- a/app/src/main/res/layout/tododialog.xml
+++ b/app/src/main/res/layout/tododialog.xml
@@ -1,19 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="500dp"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="1dp"
-    android:orientation="horizontal"
+    android:orientation="vertical">
 
 
-    >
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/nameLayout"
@@ -24,31 +18,31 @@
                 android:id="@+id/todoEditTxt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Name"
-                android:singleLine="true" />
+                android:hint="todo"
+                android:singleLine="true"
+                />
         </android.support.design.widget.TextInputLayout>
 
 
+    <Button
+        android:id="@+id/addButton"
+        android:layout_width="388dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:clickable="true"
+        android:text="Save"
+        android:textColor="#000" />
+
         <Button
-            android:id="@+id/addButton"
-            android:layout_width="fill_parent"
+            android:id="@+id/retrieveBtn"
+            android:layout_width="390dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
-            android:background="@color/colorAccent"
             android:clickable="true"
-            android:text="Save"
-            android:textColor="@android:color/white" />
-
-        <Button android:id="@+id/retrieveBtn"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
             android:text="Reload"
-            android:clickable="true"
-            android:background="@color/colorAccent"
-            android:layout_marginTop="40dp"
-            android:textColor="@android:color/white"/>
+            android:textColor="#000" />
 
 
-    </LinearLayout>
+
 
 </LinearLayout>
