--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    >
 
     <item
         android:id="@+id/navigation_home"
         android:icon="@drawable/ic_home_black_24dp"
-        android:title="Home"/>
+        android:title="Home" />
 
     <item
         android:id="@+id/navigation_calendar"
@@ -17,13 +18,13 @@
         android:title="TodoLists" />
 
     <!--<item-->
-        <!--android:id="@+id/navigation_schedule"-->
-        <!--android:icon="@drawable/ic_action_schedule"-->
-        <!--android:title="DailySchedules" />-->
+    <!--android:id="@+id/navigation_schedule"-->
+    <!--android:icon="@drawable/ic_action_schedule"-->
+    <!--android:title="DailySchedules" />-->
 
     <item
         android:id="@+id/navigation_memo"
         android:icon="@drawable/ic_action_memo"
-        android:title="Memo"/>
+        android:title="Memo" />
 
 </menu>
