--- a/app/src/main/res/layout/todo.xml
+++ b/app/src/main/res/layout/todo.xml
@@ -7,73 +7,58 @@
     tools:context=".TodoFragment"
     >
 
-    <TextView
-        android:id="@+id/todotitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:text="Todo Lists"
-        android:textColor="#fff"
-        android:textSize="30sp"
-        android:textStyle="bold|italic" />
-
-    <TextView
-        android:id="@+id/direction1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/todotitle"
-        android:layout_centerHorizontal="true"
-        android:text="1:You can add lists by clicking floatingactionbar"
-        android:textStyle="bold|italic" />
-
-
-    <TextView
-        android:id="@+id/direction2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/direction1"
-        android:layout_centerHorizontal="true"
-        android:text="2:You can delete/edit Lists by longclicking"
-        android:textStyle="bold|italic" />
-
-
-    <!--<android.support.design.widget.AppBarLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:theme="@style/AppTheme.AppBarOverlay">-->
-
-        <!--<android.support.v7.widget.Toolbar-->
-            <!--android:id="@+id/toolbar"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="?attr/actionBarSize"-->
-            <!--android:background="?attr/colorPrimary"-->
-            <!--app:popupTheme="@style/AppTheme.PopupOverlay" />-->
-
-    <!--</android.support.design.widget.AppBarLayout>-->
-
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="200dp"
+    <RelativeLayout
+        android:id="@+id/layoutBottom"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_gravity="bottom|end"
-        android:src="@drawable/ic_action_todo"
-        tools:layout_editor_absoluteX="328dp"
-        tools:layout_editor_absoluteY="397dp"
-        />
+        android:layout_centerHorizontal="true"
+        android:padding="5dp">
+
+
+        <Button
+            android:id="@+id/btnAdd"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:background="#fff"
+            android:text="create new memo"
+            android:textAllCaps="false"
+            android:textColor="#000"
+            android:textStyle="bold|italic" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_alignParentTop="true"
+            android:background="#999" />
+    </RelativeLayout>
+
 
     <ListView
-        android:layout_below="@+id/direction2"
-        android:id="@+id/todoList"
+
+        android:id="@+id/todoListView"
         android:layout_width="match_parent"
-        android:layout_height="418dp"
-        android:layout_alignParentBottom="true"
+        android:layout_height="364dp"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="53dp"
-        >
-    </ListView>
+        android:layout_centerVertical="true"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="10dp"
+        android:listSelector="@android:color/transparent" />
+
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="44dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_vertical"
+        android:text="Memo"
+        android:textColor="#fff"
+        android:textSize="30dp"
+        android:textStyle="bold|italic" />
+
+
+
 
 </RelativeLayout>
